[package]
name = "hermes"
version = "0.1.0"
authors = ["Philipp Moritz <pcmoritz@gmail.com>"]

[dependencies]
log = "0.3"
env_logger = "0.3"
libc = "0.1.10"
rand = "*"

[dependencies.protobuf]
git = "https://github.com/stepancheg/rust-protobuf.git"

[dependencies.nanomsg]
git = "https://github.com/thehydroimpulse/nanomsg.rs.git"

[dependencies.petgraph]
git = "https://github.com/bluss/petulant-avenger-graphlibrary"
